--- a/SpaceShiftGame/CmakeLists.txt
+++ b/SpaceShiftGame/CmakeLists.txt
@@ -38,6 +38,11 @@ add_executable(${SPACE_SHIFT_GAME_TARGET_NAME}
       ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/TwinBlade.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/TwinBlade.cpp
 
+
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/TwinBladeStage.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/TwinBladeStage.cpp
+
+
       ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/GameLevelOne.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/GameLevelOne.cpp
 
