--- a/SpaceShiftGame/CmakeLists.txt
+++ b/SpaceShiftGame/CmakeLists.txt
@@ -20,20 +20,26 @@ add_executable(${SPACE_SHIFT_GAME_TARGET_NAME}
       ${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/Bullet.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/Bullet.cpp
 
+      
       ${CMAKE_CURRENT_SOURCE_DIR}/include/gameplay/HealthComponent.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/gameplay/HealthComponent.cpp
 
+      
       ${CMAKE_CURRENT_SOURCE_DIR}/include/VFX/Explosion.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/VFX/Explosion.cpp
+
 
       ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/SpaceShipEnemy.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/SpaceShipEnemy.cpp
 
+
       ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/Vanguard.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/Vanguard.cpp
 
+
       ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/VanguardStage.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/VanguardStage.cpp
+
 
       ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/TwinBlade.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/TwinBlade.cpp
@@ -43,11 +49,19 @@ add_executable(${SPACE_SHIFT_GAME_TARGET_NAME}
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/TwinBladeStage.cpp
 
 
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/Hexagon.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/Hexagon.cpp
+
+
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/HexagonStage.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/HexagonStage.cpp
+
+
       ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/GameLevelOne.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/GameLevelOne.cpp
 
 
- "include/spaceShip/SpaceShip.h" "src/spaceShip/SpaceShip.cpp" "include/player/PlayerSpaceShip.h" "src/player/PlayerSpaceShip.cpp" "include/weapon/Shooter.h" "include/weapon/BulletShooter.h" "src/weapon/BulletShooter.cpp" "src/weapon/Shooter.cpp" "src/gameplay/HealthComponent.cpp" "include/VFX/Explosion.h" "src/VFX/Explosion.cpp" "include/Enemy/SpaceShipEnemy.h" "src/Enemy/SpaceShipEnemy.cpp" "include/Enemy/Vanguard.h" "src/Enemy/Vanguard.cpp" "include/Enemy/VanguardStage.h" "src/Enemy/VanguardStage.cpp" "src/Enemy/TwinBlade.cpp")
+ "include/spaceShip/SpaceShip.h" "src/spaceShip/SpaceShip.cpp" "include/player/PlayerSpaceShip.h" "src/player/PlayerSpaceShip.cpp" "include/weapon/Shooter.h" "include/weapon/BulletShooter.h" "src/weapon/BulletShooter.cpp" "src/weapon/Shooter.cpp" "src/gameplay/HealthComponent.cpp" "include/VFX/Explosion.h" "src/VFX/Explosion.cpp" "include/Enemy/SpaceShipEnemy.h" "src/Enemy/SpaceShipEnemy.cpp" "include/Enemy/Vanguard.h" "src/Enemy/Vanguard.cpp" "include/Enemy/VanguardStage.h" "src/Enemy/VanguardStage.cpp" "src/Enemy/TwinBlade.cpp" "include/Enemy/Hexagon.h" "src/Enemy/Hexagon.cpp")
 
 target_include_directories(${SPACE_SHIFT_GAME_TARGET_NAME} PUBLIC 
     ${CMAKE_CURRENT_SOURCE_DIR}/include
