--- a/SpaceShiftGame/CmakeLists.txt
+++ b/SpaceShiftGame/CmakeLists.txt
@@ -16,6 +16,14 @@ add_executable(${SPACE_SHIFT_GAME_TARGET_NAME}
       ${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/BulletShooter.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/BulletShooter.cpp
 
+
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/ThreeWayShooter.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/ThreeWayShooter.cpp
+
+
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/FrontalWiper.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/FrontalWiper.cpp
+
       
       ${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/Bullet.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/Bullet.cpp
@@ -57,11 +65,19 @@ add_executable(${SPACE_SHIFT_GAME_TARGET_NAME}
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/HexagonStage.cpp
 
 
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/UFO.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/UFO.cpp
+
+
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/UFOStage.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/UFOStage.cpp
+
+
       ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/GameLevelOne.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/GameLevelOne.cpp
 
 
- "include/spaceShip/SpaceShip.h" "src/spaceShip/SpaceShip.cpp" "include/player/PlayerSpaceShip.h" "src/player/PlayerSpaceShip.cpp" "include/weapon/Shooter.h" "include/weapon/BulletShooter.h" "src/weapon/BulletShooter.cpp" "src/weapon/Shooter.cpp" "src/gameplay/HealthComponent.cpp" "include/VFX/Explosion.h" "src/VFX/Explosion.cpp" "include/Enemy/SpaceShipEnemy.h" "src/Enemy/SpaceShipEnemy.cpp" "include/Enemy/Vanguard.h" "src/Enemy/Vanguard.cpp" "include/Enemy/VanguardStage.h" "src/Enemy/VanguardStage.cpp" "src/Enemy/TwinBlade.cpp" "include/Enemy/Hexagon.h" "src/Enemy/Hexagon.cpp")
+ "include/spaceShip/SpaceShip.h" "src/spaceShip/SpaceShip.cpp" "include/player/PlayerSpaceShip.h" "src/player/PlayerSpaceShip.cpp" "include/weapon/Shooter.h" "include/weapon/BulletShooter.h" "src/weapon/BulletShooter.cpp" "src/weapon/Shooter.cpp" "src/gameplay/HealthComponent.cpp" "include/VFX/Explosion.h" "src/VFX/Explosion.cpp" "include/Enemy/SpaceShipEnemy.h" "src/Enemy/SpaceShipEnemy.cpp" "include/Enemy/Vanguard.h" "src/Enemy/Vanguard.cpp" "include/Enemy/VanguardStage.h" "src/Enemy/VanguardStage.cpp" "src/Enemy/TwinBlade.cpp" "include/Enemy/Hexagon.h" "src/Enemy/Hexagon.cpp" "include/Enemy/UFO.h" "src/Enemy/UFO.cpp" "include/weapon/FrontalWiper.h" "src/weapon/FrontalWiper.cpp")
 
 target_include_directories(${SPACE_SHIFT_GAME_TARGET_NAME} PUBLIC 
     ${CMAKE_CURRENT_SOURCE_DIR}/include
