--- a/SpaceShiftGame/CmakeLists.txt
+++ b/SpaceShiftGame/CmakeLists.txt
@@ -73,6 +73,18 @@ add_executable(${SPACE_SHIFT_GAME_TARGET_NAME}
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/UFOStage.cpp
 
 
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/player/Reward.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/player/Reward.cpp
+
+
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/player/Player.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/player/Player.cpp
+
+
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/player/PlayerManager.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/player/PlayerManager.cpp
+
+
       ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/GameLevelOne.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/GameLevelOne.cpp
 
