--- a/SpaceShiftGame/CmakeLists.txt
+++ b/SpaceShiftGame/CmakeLists.txt
@@ -85,6 +85,10 @@ add_executable(${SPACE_SHIFT_GAME_TARGET_NAME}
       ${CMAKE_CURRENT_SOURCE_DIR}/src/player/PlayerManager.cpp
 
 
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/widgets/GameplayHUD.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/widgets/GameplayHUD.cpp
+
+
       ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/GameLevelOne.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/GameLevelOne.cpp
 
