added score system, implemented menu level with working buttons

--- a/SpaceShiftGame/CmakeLists.txt
+++ b/SpaceShiftGame/CmakeLists.txt
@@ -85,12 +85,25 @@ add_executable(${SPACE_SHIFT_GAME_TARGET_NAME}
       ${CMAKE_CURRENT_SOURCE_DIR}/src/player/PlayerManager.cpp
 
 
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/widgets/MainMenuHUD.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/widgets/MainMenuHUD.cpp
+
+
       ${CMAKE_CURRENT_SOURCE_DIR}/include/widgets/GameplayHUD.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/widgets/GameplayHUD.cpp
 
 
+
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/MainMenuLevel.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/MainMenuLevel.cpp
+
+
+
       ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/GameLevelOne.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/GameLevelOne.cpp
+
+
+
 
 
  "include/spaceShip/SpaceShip.h" "src/spaceShip/SpaceShip.cpp" "include/player/PlayerSpaceShip.h" "src/player/PlayerSpaceShip.cpp" "include/weapon/Shooter.h" "include/weapon/BulletShooter.h" "src/weapon/BulletShooter.cpp" "src/weapon/Shooter.cpp" "src/gameplay/HealthComponent.cpp" "include/VFX/Explosion.h" "src/VFX/Explosion.cpp" "include/Enemy/SpaceShipEnemy.h" "src/Enemy/SpaceShipEnemy.cpp" "include/Enemy/Vanguard.h" "src/Enemy/Vanguard.cpp" "include/Enemy/VanguardStage.h" "src/Enemy/VanguardStage.cpp" "src/Enemy/TwinBlade.cpp" "include/Enemy/Hexagon.h" "src/Enemy/Hexagon.cpp" "include/Enemy/UFO.h" "src/Enemy/UFO.cpp" "include/weapon/FrontalWiper.h" "src/weapon/FrontalWiper.cpp")
