--- a/SpaceShiftEngine/CmakeLists.txt
+++ b/SpaceShiftEngine/CmakeLists.txt
@@ -63,6 +63,14 @@ add_library(${SPACE_SHIFT_ENGINE_TARGET_NAME} STATIC
       ${CMAKE_CURRENT_SOURCE_DIR}/src/widgets/ValueGuage.cpp
 
 
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/widgets/ImageWidget.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/widgets/ImageWidget.cpp
+
+
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/widgets/Button.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/widgets/Button.cpp
+
+
       ${CMAKE_CURRENT_SOURCE_DIR}/include/EntryPoint.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/EntryPoint.cpp
 
