Added Boss with different shooters and levels, also chaos level with different enemies randomly spawn for more difficulty

--- a/SpaceShiftGame/CmakeLists.txt
+++ b/SpaceShiftGame/CmakeLists.txt
@@ -73,6 +73,18 @@ add_executable(${SPACE_SHIFT_GAME_TARGET_NAME}
       ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/UFOStage.cpp
 
 
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/Boss.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/Boss.cpp
+
+
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/BossStage.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/BossStage.cpp
+
+
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/ChaosStage.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/ChaosStage.cpp
+
+
       ${CMAKE_CURRENT_SOURCE_DIR}/include/player/Reward.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/player/Reward.cpp
 
