--- a/SpaceShiftEngine/CmakeLists.txt
+++ b/SpaceShiftEngine/CmakeLists.txt
@@ -10,6 +10,11 @@ add_library(${SPACE_SHIFT_ENGINE_TARGET_NAME} STATIC
       ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Actor.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Actor.cpp
 
+
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/BackdropActor.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/BackdropActor.cpp
+
+
       ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Object.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Object.cpp
 
