--- a/SpaceShiftEngine/CmakeLists.txt
+++ b/SpaceShiftEngine/CmakeLists.txt
@@ -15,6 +15,10 @@ add_library(${SPACE_SHIFT_ENGINE_TARGET_NAME} STATIC
       ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/BackdropActor.cpp
 
 
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/BackgroundLayer.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/BackgroundLayer.cpp
+
+
       ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Object.h
       ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Object.cpp
 
